--- a/config/database.postgres.yml
+++ b/config/database.postgres.yml
@@ -2,6 +2,7 @@ default: &default
   adapter: postgresql
   encoding: utf8
   host: <%= ENV.fetch('DB_HOST', 'localhost') %>
+  port: <%= ENV.fetch('DB_PORT', '5432') %>
   username: postgres
   password: postgres
 
