Change patch file name to "Branch Name".patch

--- a/.github/workflows/create-patch.yml
+++ b/.github/workflows/create-patch.yml
@@ -22,11 +22,14 @@ jobs:
           git config --global user.email "$AUTHOR_EMAIL"
           git config --global user.name "$AUTHOR_NAME"
           git commit -m "Patch for `cat .branch-name`"
-          git format-patch development..HEAD --stdout -k > patch.diff
+          PATCH_FILE=`cat .branch-name | sed 's/\//_/g'`.patch                  # Replace forward slash in branch name with _
+          git format-patch development..HEAD --stdout -k > $PATCH_FILE
+          echo "::set-output name=PATCH_FILE::$PATCH_FILE"
+        id: patch-creator
         env:
           AUTHOR_EMAIL: ${{ github.event.head_commit.author.email }}
           AUTHOR_NAME: ${{ github.event.head_commit.author.name }}
       - uses: actions/upload-artifact@v2
         with:
           name: patch
-          path: patch.diff
+          path: ${{ steps.patch-creator.outputs.PATCH_FILE }}
