--- a/test/fixtures/custom_fields_trackers.yml
+++ b/test/fixtures/custom_fields_trackers.yml
@@ -29,3 +29,6 @@ custom_fields_trackers_009:
 custom_fields_trackers_010: 
   custom_field_id: 9
   tracker_id: 1
+custom_fields_trackers_011: 
+  custom_field_id: 12
+  tracker_id: 1
