fixtures should be string, instead of  ENV['TZ'] sensitive class

--- a/test/fixtures/custom_values.yml
+++ b/test/fixtures/custom_values.yml
@@ -106,4 +106,4 @@ custom_values_018:
   custom_field_id: 12
   customized_id: 14
   id: 18
-  value: 2011-03-11T05:46:18Z
+  value: '2011-03-11T05:46:18Z'
