--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -42,7 +42,7 @@ jobs:
       fail-fast: false
       matrix:
         ruby: [2.5, 2.6, 2.7]
-        db_version: [9.5]
+        db_version: [9.5, 10.21, 11.16, 12.11, 13.7, 14.3]
     runs-on: ubuntu-latest
     container:
       image: ruby:${{ matrix.ruby }}
