--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -42,7 +42,7 @@ jobs:
       fail-fast: false
       matrix:
         ruby: [2.5, 2.6, 2.7]
-        db_version: [9.5, 10.20, 11.15, 12.10, 13.6, 14.2]
+        db_version: [10]
     runs-on: ubuntu-latest
     container:
       image: ruby:${{ matrix.ruby }}
