--- a/config/settings.yml
+++ b/config/settings.yml
@@ -23,6 +23,8 @@ app_title:
   default: Redmine
 welcome_text:
   default:
+banner_text:
+  default:
 login_required:
   default: 0
   security_notifications: 1
