--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,9 +3,8 @@
   "name": "Redmine dev mirror",
   "dockerComposeFile": "docker-compose.yml",
   "service": "app",
-  "workspaceFolder": "/var/lib/redmine",
+  "workspaceFolder": "/workspace",
   "shutdownAction": "stopCompose",
-  "postStartCommand": "bash ./.devcontainer/scripts/postStartCommand.sh",
   // Configure tool-specific properties.
   "customizations": {
     // Configure properties specific to VS Code.
@@ -37,5 +36,7 @@
         ]
       }
     }
-  }
+  },
+  // Comment out to connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
+  "remoteUser": "vscode"
 }
