--- a/Dockerfile-for-redmine-dev-mirror
+++ b/Dockerfile-for-redmine-dev-mirror
@@ -1,32 +1,29 @@
-# Supported ruby versions: 3, 3.0, 3-bullseye, 3.0-bullseye, 3-buster, 3.0-buster, 2, 2.7, 2-bullseye, 2.7-bullseye, 2-buster, 2.7-buster, 2.6, 2.6-bullseye, 2.6-buster
-# 3.0系以外のRubyで動作検証やテストをしたい場合は3の部分を上の候補のうちのどれかに書き換えてください
-FROM mcr.microsoft.com/vscode/devcontainers/ruby:3
-ARG APP_HOME
-ARG APP_PORT
-ENV LANG C.UTF-8
+# [Choice] Ruby version (use -bullseye variants on local arm64/Apple Silicon): 3, 3.1, 3.0, 2, 2.7, 2.6, 3-bullseye, 3.1-bullseye, 3.0-bullseye, 2-bullseye, 2.7-bullseye, 2.6-bullseye, 3-buster, 3.1-buster, 3.0-buster, 2-buster, 2.7-buster, 2.6-buster
+ARG VARIANT=3.1-bullseye
+FROM mcr.microsoft.com/vscode/devcontainers/ruby:${VARIANT}
 
-ENV DEBIAN_FRONTEND noninteractive
-RUN set -eux; \
-  apt update && \
-  apt install -y --no-install-recommends \
-    bzr gsfonts imagemagick libmagick++-dev \
-    ; \
-  curl -sL https://deb.nodesource.com/setup_14.x | bash - && \
-	apt install -y nodejs && \
-	apt clean && \
-	rm -rf /var/lib/apt/lists/*;
-ENV DEBIAN_FRONTEND dialog
+# Default value to allow debug server to serve content over GitHub Codespace's port forwarding service
+# The value is a comma-separated list of allowed domains
+ENV RAILS_DEVELOPMENT_HOSTS=".githubpreview.dev"
 
-WORKDIR /var/lib/redmine
-ADD . /var/lib/redmine
+# [Choice] Node.js version: lts/*, 16, 14, 12, 10
+ARG NODE_VERSION="lts/*"
+RUN su vscode -c "source /usr/local/share/nvm/nvm.sh && nvm install ${NODE_VERSION} 2>&1"
+
+# [Optional] Uncomment this section to install additional OS packages.
+RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
+    && apt-get -y install --no-install-recommends bzr gsfonts imagemagick libmagick++-dev
+
+WORKDIR /workspace
+ADD . /workspace
 
 COPY ./.devcontainer/scripts/. /
 RUN chmod +x /entrypoint.sh; \
-    chmod +x /postStartCommand.sh;
-
-RUN /postStartCommand.sh
-RUN bundle update
-RUN bundle install
+    chmod +x /move_files.sh; \
+    /move_files.sh; \
+    mkdir /logs; touch /logs/redmine.log; chown -R vscode /logs; \
+    bundle update; \
+    bundle install;
 
 EXPOSE $APP_PORT
 
