--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        ruby: [2.6, 2.7, 3.0, 3.1]
+        ruby: ['2.7', '3.0', '3.1', '3.2']
         db_version: [5.7]
     runs-on: ubuntu-latest
     container:
@@ -41,7 +41,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        ruby: [2.6, 2.7, 3.0, 3.1]
+        ruby: ['2.7', '3.0', '3.1', '3.2']
         db_version: [10]
     runs-on: ubuntu-latest
     container:
@@ -75,7 +75,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        ruby: [2.6, 2.7, 3.0, 3.1]
+        ruby: ['2.7', '3.0', '3.1', '3.2']
     runs-on: ubuntu-latest
     container:
       image: ruby:${{ matrix.ruby }}
